# cl9

./: .envrc  .gitignore  Makefile  README.md  pyproject.toml
adr/: 0001-mission-and-initial-design.md  0002-plugin-system-architecture.md  0003-tmux-plugin.md  0004-environment-types.md  0005-agent-session-management.md  0006-cli-design.md  0007-project-bin-and-template-capabilities.md  0008-profile-bound-agent-executables.md  0009-immutable-profiles-with-explicit-cloning.md  0009-profile-and-session-architecture.md  0010-mounts-for-external-sources.md  0010-session-discovery-and-resume.md  0011-environment-profile-separation.md  0011-sealed-sessions-with-init-scripts.md  0012-full-isolation-credential-lifecycle.md
docs/adr/: 0001-mission-and-initial-design.md  0002-plugin-system-architecture.md  0003-tmux-plugin.md
notes/: 2026-04-09-statusline-debug.md
src/cl9/: __init__.py  adapters.py  agent.py  cli.py  config.py  mounts.py  profiles.py  runtime.py  sessions.py
src/cl9/environments/: __init__.py
src/cl9/environments/default/: .envrc  MEMORY.md  README.md  flake.nix
src/cl9/plugins/: __init__.py  loader.py
src/cl9/plugins/builtin/: __init__.py  tmux.py
src/cl9/profiles/codex/: INSTRUCTIONS.md  manifest.json
src/cl9/profiles/default/: CLAUDE.md  manifest.json  settings.json  statusline.py
src/cl9/profiles/default-full/: CLAUDE.md  manifest.json  settings.json  statusline.py
src/cl9/scaffold/: init-example.py
tasks/: 002-environment-types.md  003-env-update-command.md  README.md
tests/: test_agent_module.py  test_cli.py  test_mounts.py  test_smoke.py
